# TeleGen

./: .bandit.yaml  .commitlintrc.js  .dockerignore  .env.example  .env.production  .env.test  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  c.py  docker-compose.override.yml  docker-compose.yml  env-sample  gg.py  login_userbot.py  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  rss.py  t.py  t_web.py  test_web.py  userbot_session.session
.github/workflows/: ci-cd.yml  ci.yml  test.yml
admin_panel/: __init__.py  admin.py  services.py  views.py
admin_panel/admin_panel/: __init__.py  admin.py  models.py  services.py  signals.py  views.py
admin_panel/admin_panel/migrations/: 0001_initial.py  0002_alter_channel_options_alter_flow_options_and_more.py  0002_alter_flow_options_remove_flow_source_flow_ad_time_and_more.py  0002_remove_flow_ad_time_alter_post_source_url.py  0002_user_subscription_type.py  0003_alter_flow_frequency.py  0003_delete_adminpanel.py  0003_rename_image_postvideo_video.py  0004_alter_flow_frequency.py  0004_remove_user_payment_method.py  0004_user_payment_method.py  0005_alter_flow_channel.py  0005_user_first_name_user_last_name_alter_user_username.py  0006_delete_notification.py  0006_post_image.py  0007_post_video.py  0008_flow_is_auto_generated_flow_last_generated_at_and_more.py  0009_remove_flow_is_auto_generated.py  0010_post_scheduled_time.py  0011_remove_post_image_postimage.py  0012_alter_aisettings_user_alter_flow_content_length_and_more.py  0013_remove_aisettings_user_aisettings_flow.py  0014_remove_post_is_draft_remove_post_is_published_and_more.py  0015_post_original_date.py  0016_post_original_link.py  0017_post_source_id.py  0018_post_original_content_post_unique_source_id.py  0019_aisettings_role_alter_aisettings_style.py  0020_aisettings_role_content.py  0021_channel_notifications.py  0022_channel_timezone.py  0023_alter_channel_description_alter_flow_ad_time_and_more.py  0024_alter_post_original_content_alter_post_original_link.py  0025_alter_post_original_content.py  0026_remove_post_video_postvideo.py
admin_panel/admin_panel/testing/: __init__.py  data_generator.py  source_lists.py
admin_panel/core/: asgi.py  settings.py  urls.py  wsgi.py
admin_panel/core/settings/: base.py  dev.py  prod.py  testing.py
admin_panel/management/commands/: seed_data.py
admin_panel/migrations/: 0002_postimage_url_alter_payment_payment_method_and_more.py  0003_remove_subscription_channel_and_more.py  0006_payment_order_id_payment_pay_url_and_more.py  0007_user_generated_posts_count.py
admin_panel/payments/: views.py
admin_panel/testing/: data_generator.py
bot/: celery.py  celery_app.py  config.py  containers.py  generator_worker.py  main.py  tasks.py  watcher.py
bot/database/: __init__.py  exceptions.py
bot/database/dtos/: dtos.py  user_dto.py
bot/database/managers/: channel_manager.py  flow_manager.py  post_manager.py  user_manager.py
bot/database/models/: __init__.py  ai_settings.py  channel.py  flow.py  payment.py  post.py  statistics.py  subscription.py  user.py  web_post.py
bot/database/repositories/: __init__.py  aisettings_repository.py  channel_manager.py  channel_repository.py  draft_repository.py  flow_manager.py  flow_repository.py  payment_repository.py  post_manager.py  post_repository.py  statistic_repository.py  subscription_repository.py  user_repository.py
bot/database/services/: post_service.py
bot/database/utils/: async_orm.py
bot/dialogs/: __init__.py  buffer_dialog.py  generation_dialog.py  handlers.py  main_dialog.py  settings_dialog.py  support_dialog.py
bot/dialogs/buffer/: __init__.py  callbacks.py  dialog.py  edit_buffer.py  getters.py  states.py
bot/dialogs/generation/: __init__.py  callbacks.py  dialog.py  gettets.py  states.py
bot/dialogs/main/: __init__.py  callbacks.py  dialog.py  states.py
bot/dialogs/settings/: __init__.py  callbacks.py  dialog.py  flow_settings.py  getters.py  states.py
bot/dialogs/support/: __init__.py  callbacks.py  dialog.py  states.py
bot/factories/: post_factory.py
bot/handlers/: __init__.py  basic_commands.py  buffer.py  events.py  genaration.py  generation.py  main_menu.py  settings.py  start.py  support.py
bot/services/: __init__.py  aisettings_service.py  channel_service.py  cloudflare_bypass_service.py  draft_service.py  flow_service.py  limit_service.py  logger_service.py  media_service.py  media_storage_service.py  payment_service.py  post_service.py  statistics_service.py  subscription_service.py  user_service.py  userbot_service.py  web_service.py
bot/services/content_processing/: pipeline.py  processors.py
bot/services/post/: __init__.py  base.py  generation.py  post_service.py  publish.py  scheduling.py
bot/services/telegram_userbot/: __init__.py  enhanced_userbot_service.py  types.py
bot/services/web/: cloudflare_bypass_service.py  content_processor_service.py  image_extractor_service.py  post_builder_service.py  rss_service.py  rss_url_manager.py  web_scraper_service.py  web_service.py
bot/utils/: buttons.py  formatting.py  getters.py  logging.py  notifications.py  permissions.py  text_cleaner.py  validation.py
deployments/: .dockerignore  Dockerfile  Dockerfile.test  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
infra/nginx/: nginx.conf
scripts/: README_TESTS.md  delete_rss_feeds.py  test_flow_scenarios.py  test_post_generation.py
sessions/: userbot.session-journal
src/admin_panel/: admin.py  apps.py  models.py  services.py  signals.py  utils.py  views.py
src/bot/: containers.py  generator_worker.py  main.py  tasks.py
src/core/: celery_app.py  urls.py
tests/: basic_test.py  bot_test.py  celery_tasks_test.py  conftest.py  container_test.py  handlers_test.py  isolated_container_test.py  isolated_handlers_test.py  main_test.py  post_service_test.py
tmp/: apt.conf.7GL9Py  apt.data.tYyf76  tmpdv_deuao.image  tmpfx23vwex.image  tmpq3rdirkj.image  tmprnkcse13.image
utils/: delete_rss_feeds.py  login_userbot.py
(+165 files in other folders)
