[project]
name = "telegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.19.0",
    "aiogram-dialog==2.3.1",
    "aiohappyeyeballs==2.5.0",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asgiref==3.8.1",
    "attrs==25.1.0",
    "beautifulsoup4>=4.13.4",
    "cachetools==5.5.2",
    "celery>=5.4.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "cloudscraper>=1.2.71",
    "crawl4ai>=0.6.3",
    "dependency-injector==4.46.0",
    "distro==1.9.0",
    "django==5.1.7",
    "django-celery-beat>=2.8.1",
    "faker==37.0.0",
    "feedparser>=6.0.11",
    "frozenlist==1.5.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.8.2",
    "langdetect>=1.0.9",
    "magic-filter==1.0.12",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "openai==1.65.5",
    "packaging==24.2",
    "pillow==10.4.0",
    "propcache==0.3.0",
    "psycopg==3.2.9",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "python-dotenv==1.0.1",
    "pytz>=2025.2",
    "redis==5.2.1",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "sqlparse==0.5.3",
    "telethon>=1.40.0",
    "toposort==1.10",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "watchdog>=6.0.0",
    "whitenoise==6.9.0",
    "yarl==1.18.3",
]
